--- a/trustpoint/templates/devices/help/generic_details/est_application_credential_opcua_summary_block.html
+++ b/trustpoint/templates/devices/help/generic_details/est_application_credential_opcua_summary_block.html
@@ -12,7 +12,7 @@
             <div>{% trans 'OPC UA-Client Certificate Request URL' %}</div>
             <div class="copy-container" style="position: relative;">
                 <code class="command-text language-bash">
-                    https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/opcua-client/
+                    https://{{ host }}/.well-known/est/{{ device.domain }}/opcua-client/simpleenroll/
                 </code>
 
                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
@@ -27,7 +27,7 @@
             <div>{% trans 'OPC UA-Server Certificate Request URL' %}</div>
             <div class="copy-container" style="position: relative;">
                 <code class="command-text language-bash">
-                    https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/opcua-server/
+                    https://{{ host }}/.well-known/est/{{ device.domain }}/opcua-server/simpleenroll/
                 </code>
 
                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
