--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -10,12 +10,16 @@
             </div>
         </div>
         <div class="card-body">
-            <h2>{% trans "Device Details" %}</h2>
+            <h2>{% trans "Device" %} <a href="{% url 'devices:details' pk=device.id %}">{% trans "Details" %}</a></h2>
             <hr class="hr-m">
             <ul class="tp-kvp-list">
                 <li>
                     <div>{% trans 'Device Name' %}</div>
-                    <div>{{ device.unique_name }}</div>
+                    <div>{{ device.common_name }}</div>
+                </li>
+                <li>
+                    <div>{% trans 'Device Serial Number' %}</div>
+                    <div>{{ device.serial_number }}</div>
                 </li>
                 <li>
                     <div>{% trans 'Domain Credential Onboarding' %}</div>
