--- a/trustpoint/templates/devices/credentials/certificate_download.html
+++ b/trustpoint/templates/devices/credentials/certificate_download.html
@@ -24,7 +24,7 @@
                         <div class="tp-kvp-list">
                             <div>
                                 <div>{% trans 'Device' %}</div>
-                                <div>{{ issued_credential.device.unique_name }}</div>
+                                <div>{{ issued_credential.device.common_name }}</div>
                             </div>
                             <div>
                                 <div>{% trans 'Domain' %}</div>
