--- a/trustpoint/templates/devices/revoke.html
+++ b/trustpoint/templates/devices/revoke.html
@@ -31,7 +31,7 @@
                         </div>
                         <div>
                             <div>{% trans 'Associated device' %}</div>
-                            <div>{{ credential.device.unique_name }}</div>
+                            <div>{{ credential.device.common_name }}</div>
                         </div>
                     </div>
                 {% endfor %}
