--- a/trustpoint/templates/pki/issuing_cas/config.html
+++ b/trustpoint/templates/pki/issuing_cas/config.html
@@ -98,8 +98,7 @@
                                     <div>{% trans 'Certificates issued:' %}</div>
                                     <div>
                                         {% if issued_certificates|length > 0 %}
-                                            <a href="{% url 'pki:issuing_ca-issued_certificates' pk=issuing_ca.pk %}"
-                                            >
+                                            <a href="{% url 'pki:issuing_ca-issued_certificates' pk=issuing_ca.pk %}">
                                                 {{ issued_certificates|length }}
                                             </a>
                                         {% else %}
