--- a/trustpoint/templates/pki/issuing_cas/issued_certificates.html
+++ b/trustpoint/templates/pki/issuing_cas/issued_certificates.html
@@ -28,7 +28,7 @@
                             <td>{{ cert.not_valid_after }}</td>
                             <td>
                                 <a href="{% url 'pki:certificate-detail' pk=cert.id %}" class="btn btn-primary btn-sm">
-                                    {% trans 'View' %}
+                                    {% trans 'Details' %}
                                 </a>
                             </td>
                         </tr>
