--- a/trustpoint/templates/pki/certificates/certificates.html
+++ b/trustpoint/templates/pki/certificates/certificates.html
@@ -43,8 +43,7 @@
           </th>
           <th>
             <a
-              href="?sort={% if current_sort == 'certificate_status' %}-{% endif %}certificate_status"
-            >
+              href="?sort={% if current_sort == 'certificate_status' %}-{% endif %}certificate_status">
               Status
             </a>
           </th>
@@ -76,8 +75,8 @@
           <td>{{ certificate.certificate_status }}</td>
           <td>{{ certificate.created_at }}</td>
           <td>{% if certificate.is_self_signed == 1 %} ✔ {% else %} ✘ {% endif %}</td>
-          <td><a href="details/{{certificate.id}}/" class="btn btn-primary tp-table-btn w-100">Details</a></td>
-          <td><a href="download/{{certificate.id}}/" class="btn btn-primary tp-table-btn w-100">Download</a></td>
+          <td><a href="{% url 'pki:certificate-detail' pk=certificate.id %}" class="btn btn-primary tp-table-btn w-100">Details</a></td>
+          <td><a href="{% url 'pki:certificate-download' pk=certificate.id %}" class="btn btn-primary tp-table-btn w-100">Download</a></td>
         </tr>
         {% empty %}
         <tr>
