--- a/trustpoint/templates/pki/issuing_cas/issued_certificates.html
+++ b/trustpoint/templates/pki/issuing_cas/issued_certificates.html
@@ -78,7 +78,7 @@
             {% empty %}
             <tr>
                 <td colspan="11"
-                    class="middle">{% trans 'No certificates are available. Add an Issuing CA first.' %}</td>
+                    class="middle">{% trans 'No certificates are available.' %}</td>
             </tr>
             {% endfor %}
             </tbody>
