--- a/trustpoint/templates/devices/help/onboarding/application_credential_details/est_application_credentials_capabilities_block.html
+++ b/trustpoint/templates/devices/help/onboarding/application_credential_details/est_application_credentials_capabilities_block.html
@@ -77,7 +77,7 @@
                     "https://{{ host }}/.well-known/est/{{ device.domain }}/cacerts/" \<br>
                     --cacert server_cert.pem \<br>
                     -H "Accept: application/pkcs7-mime" \<br>
-                    -o cacerts.p7b
+                    | base64 --decode > cacerts.p7b
                 </code>
                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
                         aria-label="Copy to clipboard">
