--- a/trustpoint/templates/devices/devices.html
+++ b/trustpoint/templates/devices/devices.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="card-body text-start" style="overflow: auto; flex-grow: 1; max-height: 90%;">
-      {% include 'devices/details/devices_table.html' %}
+      {% include 'devices/devices_table.html' %}
       {% include 'trustpoint/pagination.html' %}
     </div>
       <div class="card-footer d-flex justify-content-between tp-sticky-footer">
