--- a/trustpoint/templates/devices/help/onboarding/cmp_application_credentials.html
+++ b/trustpoint/templates/devices/help/onboarding/cmp_application_credentials.html
@@ -26,6 +26,7 @@
 
                     <h2 class="mt-5">{% trans 'Enroll Application Credential' %}</h2>
                     <hr>
+                    {% include 'devices/help/onboarding/domain_credential_details/cmp_issuing_ca_block.html' %}
                     {% include 'devices/help/generic_details/generic_application_credential_key_gen_block.html' %}
                     {% include 'devices/help/onboarding/application_credential_details/cmp_enroll_application_credential_block.html' %}
 
