--- a/trustpoint/templates/devices/devices_table.html
+++ b/trustpoint/templates/devices/devices_table.html
@@ -51,7 +51,7 @@
                 <td class="row_checkbox">
                     <input type="checkbox" name="row_checkbox" value="{{ device.id }}"/>
                 </td>
-                <td>{{ device.unique_name }}</td>
+                <td>{{ device.common_name }}</td>
                 <td>{{ device.domain }}</td>
                 <td>{{ device.serial_number }}</td>
                 <td>{{ device.created_at }}</td>
