--- a/trustpoint/templates/setup_wizard/generate_tls_server_credential.html
+++ b/trustpoint/templates/setup_wizard/generate_tls_server_credential.html
@@ -42,7 +42,7 @@
                 <hr>
                 <div class="tp-form-btn-group tp-form-btn-group">
                     <a href="{% url 'setup_wizard:initial' %}" class="btn btn-secondary w-100 mt-1">{% trans "Cancel" %}</a>
-                    <button class="btn btn-primary w-100 mt-1" type="submit">{% trans "Generate Self-Singed TLS-Server Credential" %}</button>
+                    <button class="btn btn-primary w-100 mt-1" type="submit">{% trans "Generate Self-Signed TLS-Server Credential" %}</button>
                 </div>
             </form>
         </div>
