Add new translations

--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -26,11 +26,11 @@
                     <div>{{ device.domain_credential_onboarding }}</div>
                 </li>
                 <li>
-                    <div>{% trans 'Onboarding-Protocol' %}</div>
+                    <div>{% trans 'Onboarding protocol' %}</div>
                     <div>{{ device.get_onboarding_protocol_display }}</div>
                 </li>
                 <li>
-                    <div>{% trans 'PKI-Protocol' %}</div>
+                    <div>{% trans 'PKI protocol' %}</div>
                     <div>{{ device.get_pki_protocol_display }}</div>
                 </li>
                 <li>
@@ -46,14 +46,14 @@
                     </div>
                 </li>
                 <li>
-                    <div>{% trans 'Signature-Suite' %}</div>
+                    <div>{% trans 'Signature Suite' %}</div>
                     <div>{{ device.public_key_info }}</div>
                 </li>
             </ul>
             <hr class="mb-5">
             {% if not device.domain_credential_onboarding %}
                 {% if device.pki_protocol == device.PkiProtocol.MANUAL.value %}
-                    <h2>{% trans "Issue New Application Credentials" %}</h2>
+                    <h2>{% trans "Issue new Application Credentials" %}</h2>
                     <hr>
                     <div class="d-flex flex-wrap align-items-start gap-2">
                         <a href="{% url 'devices:certificate_lifecycle_management-issue_tls_client_credential' pk=device.id %}"
@@ -76,7 +76,7 @@
                     <span>{% trans "Issued Domain Credentials" %}</span>
                     <a href="{% url 'devices:help_dispatch_domain' pk=device.pk %}" class="btn btn-primary"
                        style="width: 25rem;">
-                        {% trans "Help - Issue New Domain Credentials" %}
+                        {% trans "Help - Issue new Domain Credentials" %}
                     </a>
                 </h2>
                 <hr>
@@ -149,14 +149,14 @@
                     {% if device.onboarding_status != device.OnboardingStatus.PENDING.value %}
                         <a href="{% url 'devices:help_dispatch_application' pk=device.pk %}" class="btn btn-primary"
                            style="width: 25rem;">
-                            {% trans "Help - Issue New Application Credentials" %}
+                            {% trans "Help - Issue new Application Credentials" %}
                         </a>
                     {% else %}
                         <a href="{% url 'devices:help_dispatch_application' pk=device.pk %}"
                            class="btn {% if device.domain_credential_onboarding %}btn-secondary{% else %}btn-primary{% endif %}"
                            style="width: 25rem; {% if device.domain_credential_onboarding %}pointer-events: none;{% endif %}"
                            {% if device.domain_credential_onboarding %}aria-disabled="true"{% endif %}>
-                            {% trans "Help - Issue New Application Credentials" %}
+                            {% trans "Help - Issue new Application Credentials" %}
                         </a>
                     {% endif %}
                 </h2>
