--- a/trustpoint/templates/pki/domains/domain.html
+++ b/trustpoint/templates/pki/domains/domain.html
@@ -24,7 +24,7 @@
                     </a>
                 </th>
                 <th>{% trans '# Devices' %}</th>
-                <th>{% trans 'Signature-Suite' %}</th>
+                <th>{% trans 'Signature Suite' %}</th>
                 <th>
                     <a href="?sort={% if created_at == 'created_at' %}-{% endif %}created_at" style="font-weight: bold;">
                         Created At
