--- a/trustpoint/templates/setup_wizard/demo_data.html
+++ b/trustpoint/templates/setup_wizard/demo_data.html
@@ -32,7 +32,7 @@
         </div>
         <div class="card-body pt-3 pb-4">
             <h2>{% trans 'Pre-population with Demo Data' %}</h2>
-            <p>For testing the Trustpoint features and capabilities we recommend to pre-populate the database with demo data.</p>
+            <p>{% trans 'For testing Trustpoint features and capabilities we recommend pre-populating the database with demo data.' %}</p>
             <hr>
             <form method="POST" class="text-start">
                 {% csrf_token %}
