--- a/trustpoint/templates/setup_wizard/tls_server_credential_apply.html
+++ b/trustpoint/templates/setup_wizard/tls_server_credential_apply.html
@@ -33,7 +33,7 @@
         <div class="card-body pt-3 pb-4">
             <h2>{% trans 'Download TLS-Server Trust-Store' %}</h2>
             <br>
-            <p>We recommend importing the TLS-Server Trust-Store into your browser or operating system ca store.</p>
+            <p>{% trans 'We recommend importing the TLS Server Trust-Store into your browser or operating system CA store.' %}</p>
             <div class="pt-2 pb-4">
                 <a class="btn btn-primary min-width-15" href="{% url 'setup_wizard:tls_server_credential_apply' file_format='pem' %}">Download as PEM</a>
                 <a class="btn btn-primary min-width-15" href="{% url 'setup_wizard:tls_server_credential_apply' file_format='pkcs7_der' %}">Download as PKCS#7 (DER)</a>
