Internationalize further strings
Reduce duplication in certificate tables

--- a/trustpoint/templates/devices/details/sub_details.html
+++ b/trustpoint/templates/devices/details/sub_details.html
@@ -140,7 +140,7 @@
                     {% trans 'Inactive' %}{% endif %}</div>
             </li>
             <li>
-                <div>{% trans 'Created At' %}</div>
+                <div>{% trans 'Created at' %}</div>
                 <div>{{ device.domain.issuing_ca.created_at }}</div>
             </li>
         </ul>
