--- a/trustpoint/templates/pki/issuing_cas/config.html
+++ b/trustpoint/templates/pki/issuing_cas/config.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="card tp-card-centered">
         <div class="card-header">
-            <h2>{{ issuing_ca.unique_name }} {% trans "Configuration" %}</h2>
+            <h2>{{ issuing_ca.unique_name }} {% trans 'Configuration' %}</h2>
         </div>
 
         <form method="POST" autocomplete="on" enctype="multipart/form-data">
@@ -13,21 +13,23 @@
                 <div class="card-body">
                     <div class="tp-card-centered-content">
                         <div class="card-body">
-                            <h3>{% trans "Domains" %}</h3>
+                            <h3>{% trans 'Domains' %}</h3>
                             <hr class="hr-m">
                             {% if issuing_ca.domains.all %}
+                                <div class="tp-kvp-list">
                                 {% for domain in issuing_ca.domains.all %}
-                                    <li class="tp-card-split">
-                                        {{ domain.unique_name }}
+                                    <div>
                                         <div>
-
+                                            <a href="{% url 'pki:domains-config' pk=domain.id %}">{{ domain.unique_name }}</a>
                                         </div>
-                                    </li>
+                                        <div></div>
+                                    </div>
                                 {% endfor %}
+                                </div>
                             {% else %}
                                 <div class="tp-kvp-list">
                                     <div class="text-muted">
-                                        {% trans "No associated domains" %}
+                                        {% trans 'No associated domains' %}
                                     </div>
                                 </div>
                             {% endif %}
@@ -98,38 +100,26 @@
                                     <div>{% trans 'Certificates issued:' %}</div>
                                     <div>
                                         {% if issued_certificates|length > 0 %}
-                                            <a href="{% url 'pki:issuing_ca-issued_certificates' pk=issuing_ca.pk %}">
-                                                {{ issued_certificates|length }}
-                                            </a>
-                                        {% else %}
                                             {{ issued_certificates|length }}
+                                            <br>
+                                            <a href="{% url 'pki:issuing_ca-issued_certificates' pk=issuing_ca.id %}"
+                                                class="btn btn-sm btn-primary mt-2">{% trans 'Show all issued certificates' %}</a>
+                                        {% else %}
+                                            0
                                         {% endif %}
                                     </div>
                                 </div>
-
-
                             </div>
                         </div>
                     </div>
 
-                    {% if issuing_ca.issuing_ca_certificate.issued_certificate_references.all %}
-                        <div>
-                            <div>Number of Issued Certificates</div>
-                            <div>
-                                {{ issuing_ca.issuing_ca_certificate.issued_certificate_references.count }}
-                                <br>
-                                <a href="{% url 'pki:issued_certificates' pk=issuing_ca.issuing_ca_certificate.id %}"
-                                   class="btn btn-primary my-1">Show All Issued Certificates</a>
-                            </div>
-                        </div>
-                    {% endif %}
                     <div class="tp-card-centered-content">
                         <div class="card-body">
                             <h3>
                                 {% if issuing_ca.credential.certificate.subject_public_bytes == issuing_ca.credential.certificate.issuer_public_bytes %}
-                                    Issuing CA Certificate (This is a self-signed Root CA Certificate)
+                                    {% trans 'Issuing CA Certificate (This is a self-signed Root CA Certificate)' %}
                                 {% else %}
-                                    Issuing CA Certificate
+                                    {% trans 'Issuing CA Certificate' %}
                                 {% endif %}
                             </h3>
                             <hr class="hr-m">
@@ -152,7 +142,7 @@
                                         <div>{{ issuing_ca_certificate.serial_number }}</div>
                                     </div>
                                     <div>
-                                        <div>Fingerprint (SHA256)</div>
+                                        <div>{% trans 'Fingerprint (SHA256)' %}</div>
                                         <div>{{ issuing_ca_certificate.sha256_fingerprint }}</div>
                                     </div>
                                     <div>
@@ -165,31 +155,31 @@
                                     </div>
 
                                     <div>
-                                        <div>Public Key Algorithm OID</div>
+                                        <div>{% trans 'Public Key Algorithm OID' %}</div>
                                         <div>{{ issuing_ca_certificate.spki_algorithm_oid }}</div>
                                     </div>
 
                                     <div>
-                                        <div>Public Key Algorithm</div>
+                                        <div>{% trans 'Public Key Algorithm' %}</div>
                                         <div>{{ issuing_ca_certificate.spki_algorithm }}</div>
                                     </div>
 
                                     {% if issuing_ca_certificate.spki_ec_curve_oid != 'None' %}
                                         <div>
-                                            <div>Public Key Curve OID</div>
+                                            <div>{% trans 'Public Key Curve OID' %}</div>
                                             <div>{{ issuing_ca_certificate.spki_ec_curve_oid }}</div>
                                         </div>
                                     {% endif %}
 
                                     {% if issuing_ca_certificate.spki_ec_curve %}
                                         <div>
-                                            <div>Public Key Curve</div>
+                                            <div>{% trans 'Public Key Curve' %}</div>
                                             <div>{{ issuing_ca_certificate.spki_ec_curve }}</div>
                                         </div>
                                     {% endif %}
 
                                     <div>
-                                        <div>Signature Algorithm Key Size</div>
+                                        <div>{% trans 'Signature Algorithm Key Size' %}</div>
                                         <div>
                                             {{ issuing_ca_certificate.spki_key_size }} Bits
                                         </div>
@@ -222,7 +212,7 @@
                                 <div>{{ issuing_ca.root_ca_certificate.serial_number }}</div>
                             </div>
                             <div>
-                                <div>Fingerprint (SHA256)</div>
+                                <div>{% trans 'Fingerprint (SHA256)' %}</div>
                                 <div>{{ issuing_ca.root_ca_certificate.sha256_fingerprint }}</div>
                             </div>
                             <div>
@@ -235,31 +225,31 @@
                             </div>
 
                             <div>
-                                <div>Public Key Algorithm OID</div>
+                                <div>{% trans 'Public Key Algorithm OID' %}</div>
                                 <div>{{ issuing_ca.root_ca_certificate.spki_algorithm_oid }}</div>
                             </div>
 
                             <div>
-                                <div>Public Key Algorithm</div>
+                                <div>{% trans 'Public Key Algorithm' %}</div>
                                 <div>{{ issuing_ca.root_ca_certificate.spki_algorithm }}</div>
                             </div>
 
                             {% if cert.issuer and cert.spki_ec_curve_oid != 'None' %}
                                 <div>
-                                    <div>Public Key Curve OID</div>
+                                    <div>{% trans 'Public Key Curve OID' %}</div>
                                     <div>{{ issuing_ca.root_ca_certificate.spki_ec_curve_oid }}</div>
                                 </div>
                             {% endif %}
 
                             {% if cert.issuer and cert.spki_ec_curve %}
                                 <div>
-                                    <div>Public Key Curve</div>
+                                    <div>{% trans 'Public Key Curve' %}</div>
                                     <div>{{ issuing_ca.root_ca_certificate.spki_ec_curve }}</div>
                                 </div>
                             {% endif %}
 
                             <div>
-                                <div>Signature Algorithm Key Size</div>
+                                <div>{% trans 'Signature Algorithm Key Size' %}</div>
                                 <div>
                                     {{ issuing_ca.root_ca_certificate.spki_key_size }} Bits
                                 </div>
