--- a/trustpoint/templates/pki/certificates/components/hierarchy.html
+++ b/trustpoint/templates/pki/certificates/components/hierarchy.html
@@ -1,12 +1,12 @@
 {% load i18n %}
 
 {% block certificate_hierarchy %}
-    <h2>Certificate Hierarchy</h2>
+    <h2>{% trans 'Certificate Hierarchy' %}</h2>
     <hr class="hr-m">
 
     <div class="tp-kvp-list">
         <div>
-            <div>Issuer</div>
+            <div>{% trans 'Issuer' %}</div>
             <div>
                 {% for entry in cert.issuer.all %}
                     {{ entry }}<br>
@@ -15,29 +15,29 @@
         </div>
 
         <div>
-            <div>End-Entity Certificate</div>
+            <div>{% trans 'End-Entity Certificate' %}</div>
             <div>{{ cert.is_end_entity }}</div>
         </div>
 
         <div>
-            <div>Certificate Authority (CA)</div>
+            <div>{% trans 'Certificate Authority (CA)' %}</div>
             <div>{{ cert.is_ca }}</div>
         </div>
 
         <div>
-            <div>Root Certificate Authority (CA)</div>
+            <div>{% trans 'Root Certificate Authority (CA)' %}</div>
             <div>{{ cert.is_root_ca }}</div>
         </div>
 
         <div>
-            <div>Self-Signed</div>
+            <div>{% trans 'Self-Signed' %}</div>
             <div>{{ cert.is_self_signed }}</div>
         </div>
     
 
     {% for certificate_chain in cert.get_certificate_chains %}
         <div class="tp-row-br">
-            <div>Certificate Chain {{ forloop.counter }}</div>
+            <div>{% trans 'Certificate Chain' %} {{ forloop.counter }}</div>
             <div>
                 {% for certificate in certificate_chain %}
                     <a href="{% url 'pki:certificate-detail' pk=certificate.id %}">
@@ -55,11 +55,11 @@
 
     {% if cert.issued_certificate_references.all %}
         <div>
-            <div>Number of Issued Certificates</div>
+            <div>{% trans 'Number of Issued Certificates' %}</div>
             <div>
                 {{ cert.issued_certificate_references.count }}
                 <br>
-                <a href="{% url 'pki:issued_certificates' pk=cert.id %}" class="btn btn-primary my-1">Show All Issued Certificates</a>
+                <a href="{% url 'pki:issued_certificates' pk=cert.id %}" class="btn btn-primary my-1">{% trans 'Show all issued certificates' %}</a>
             </div>
         </div>
     {% endif %}
