--- a/trustpoint/templates/pki/certificates/components/extensions/subject_alternative_name_extension_content.html
+++ b/trustpoint/templates/pki/certificates/components/extensions/subject_alternative_name_extension_content.html
@@ -1,9 +1,10 @@
+{% load i18n %}
 {% block subject_alternative_name_extension_content %}
     {% if cert.subject_alternative_name_extension %}
         <div class="tp-kvp-list">
         {% if cert.subject_alternative_name_extension.rfc822_names and cert.subject_alternative_name_extension.rfc822_names.all %}
             <div>
-                <div>RFC822 Names (SAN)</div>
+                <div>{% trans 'RFC822 Names (SAN)' %}</div>
                 <div>
                     {% for entry in cert.subject_alternative_name_extension.rfc822_names.all %}
                         {{ entry }}<br>
@@ -12,9 +13,9 @@
             </div>
         {% endif %}
 
-        {% if cert.subject_alternative_name_extension.dns_names and  cert.subject_alternative_name_extension.dns_names.all %}
+        {% if cert.subject_alternative_name_extension.dns_names and cert.subject_alternative_name_extension.dns_names.all %}
             <div>
-                <div>DNS Names (SAN)</div>
+                <div>{% trans 'DNS Names (SAN)' %}</div>
                 <div>
                     {% for entry in cert.subject_alternative_name_extension.dns_names.all %}
                         {{ entry }}<br>
@@ -23,9 +24,9 @@
             </div>
         {% endif %}
 
-        {% if cert.subject_alternative_name_extension.directory_names and  cert.subject_alternative_name_extension.directory_names.all %}
+        {% if cert.subject_alternative_name_extension.directory_names and cert.subject_alternative_name_extension.directory_names.all %}
             <div>
-                <div>Directory Names (SAN)</div>
+                <div>{% trans 'Directory Names (SAN)' %}</div>
                 <div>
                     {% for entry in cert.subject_alternative_name_extension.directory_names.all %}
                         {{ entry }}<br>
@@ -34,9 +35,9 @@
             </div>
         {% endif %}
 
-        {% if cert.subject_alternative_name_extension.uniform_resource_identifiers and  cert.subject_alternative_name_extension.uniform_resource_identifiers.all %}
+        {% if cert.subject_alternative_name_extension.uniform_resource_identifiers and cert.subject_alternative_name_extension.uniform_resource_identifiers.all %}
             <div>
-                <div>Uniform Resource Identifiers (SAN)</div>
+                <div>{% trans 'Uniform Resource Identifiers (SAN)' %}</div>
                 <div>
                     {% for entry in cert.subject_alternative_name_extension.uniform_resource_identifiers.all %}
                         {{ entry }}<br>
@@ -45,9 +46,9 @@
             </div>
         {% endif %}
 
-        {% if cert.subject_alternative_name_extension.ip_addresses and  cert.subject_alternative_name_extension.ip_addresses.all %}
+        {% if cert.subject_alternative_name_extension.ip_addresses and cert.subject_alternative_name_extension.ip_addresses.all %}
             <div>
-                <div>Uniform Resource Identifiers (SAN)</div>
+                <div>{% trans 'IP Addresses (SAN)' %}</div>
                 <div>
                     {% for entry in cert.subject_alternative_name_extension.ip_addresses.all %}
                         {{ entry }}<br>
@@ -56,9 +57,9 @@
             </div>
         {% endif %}
 
-        {% if cert.subject_alternative_name_extension.registered_ids and  cert.subject_alternative_name_extension.registered_ids.all %}
+        {% if cert.subject_alternative_name_extension.registered_ids and cert.subject_alternative_name_extension.registered_ids.all %}
             <div>
-                <div>Uniform Resource Identifiers (SAN)</div>
+                <div>{% trans 'Registered IDs (SAN)' %}</div>
                 <div>
                     {% for entry in cert.subject_alternative_name_extension.registered_ids.all %}
                         {{ entry }}<br>
@@ -67,9 +68,9 @@
             </div>
         {% endif %}
 
-        {% if cert.subject_alternative_name_extension.other_names and  cert.subject_alternative_name_extension.other_names.all %}
+        {% if cert.subject_alternative_name_extension.other_names and cert.subject_alternative_name_extension.other_names.all %}
             <div>
-                <div>Other Names (SAN)</div>
+                <div>{% trans 'Other Names (SAN)' %}</div>
                 <div>
                     {% for entry in cert.subject_alternative_name_extension.other_names.all %}
                         {{ entry }}<br>
