--- a/trustpoint/templates/pki/devid_registration/method_select.html
+++ b/trustpoint/templates/pki/devid_registration/method_select.html
@@ -8,7 +8,7 @@
         <div class="card">
             <div class="card-header">
                 <div>
-                    <h1>{% trans 'Add new DevID Onboarding Pattern' %}</h1>
+                    <h1>{% trans 'Add new DevID Registration Pattern for onboarding' %}</h1>
                 </div>
             </div>
             <div class="card-body">
