--- a/trustpoint/templates/pki/certificates/components/general.html
+++ b/trustpoint/templates/pki/certificates/components/general.html
@@ -17,7 +17,7 @@
         </div>
         <div>
             <div>{% trans 'Certificate Status' %}</div>
-            <div>{{ cert.get_certificate_status }}</div>
+            <div>{{ cert.certificate_status.label }}</div>
         </div>
     </div>
 {% endblock general %}
